# icicle

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  cabal.project
icicle-compiler/: icicle.cabal
icicle-compiler/main/: icicle.hs
icicle-compiler/src/Icicle/: Compiler.hs  Repl.hs
icicle-compiler/src/Icicle/Avalanche/: Program.hs  Simp.hs
icicle-compiler/src/Icicle/Avalanche/Prim/: Compounds.hs  Eval.hs  Flat.hs
icicle-compiler/src/Icicle/Avalanche/Statement/: Simp.hs  Statement.hs
icicle-compiler/src/Icicle/Command/: Compile.hs  Query.hs
icicle-compiler/src/Icicle/Compiler/: Sea.hs
icicle-compiler/src/Icicle/Internal/: Aeson.hs  Rename.hs  WrappedResourceT.hs
icicle-compiler/src/Icicle/LSP/: Driver.hs  Interface.hs  Protocol.hs  State.hs
icicle-compiler/src/Icicle/LSP/Protocol/: Base.hs  Initialize.hs  Request.hs
icicle-compiler/src/Icicle/LSP/Task/: Diagnostics.hs  Hover.hs
icicle-compiler/src/Icicle/Repl/: Completion.hs  Load.hs  Monad.hs  Parser.hs  Pretty.hs  Query.hs  Source.hs
icicle-compiler/src/Icicle/Runtime/: Evaluator.hs  Stencil.hs
icicle-compiler/src/Icicle/Runtime/Data/: Array.hs  Mask.hs  Schema.hs  Striped.hs
icicle-compiler/src/Icicle/Sea/: Header.hs
icicle-compiler/src/Icicle/Sea/Eval/: Base.hs
icicle-compiler/src/Icicle/Sea/FromAvalanche/: Analysis.hs  Prim.hs
icicle-compiler/test/: test.hs
icicle-compiler/test/Icicle/Test/: Language.hs
icicle-compiler/test/Icicle/Test/Arbitrary/: Core.hs  Corpus.hs  Data.hs  NanEq.hs  Program.hs  Source.hs  SourceWithCore.hs
icicle-compiler/test/Icicle/Test/Data/: Time.hs
icicle-compiler/test/Icicle/Test/Dictionary/: Types.hs
icicle-compiler/test/Icicle/Test/Foreign/: Array.hs  Utils.hs
icicle-compiler/test/Icicle/Test/Internal/: EditDistance.hs
icicle-compiler/test/Icicle/Test/Runtime/: Evaluator.hs
icicle-compiler/test/Icicle/Test/Sea/: Header.hs  Name.hs  PsvFission.hs  Text.hs  Utils.hs
icicle-compiler/test/Icicle/Test/Sorbet/: PrettyParse.hs
icicle-compiler/test/Icicle/Test/Source/: Convert.hs  MaxMapSize.hs  PrettyParse.hs  Progress.hs
icicle-compiler/test/cli/repl/: dictionary.icicle  run
icicle-compiler/test/cli/repl/t01-sanity/: expected  script
icicle-compiler/test/cli/repl/t01.2-trig/: expected  script
icicle-compiler/test/cli/repl/t02-groups/: expected  script
icicle-compiler/test/cli/repl/t02.1-group-groups/: dictionary.icicle  expected  script
icicle-compiler/test/cli/repl/t03-distinct/: expected  script
icicle-compiler/test/cli/repl/t03.1-distinct-tomb/: expected  script
icicle-compiler/test/cli/repl/t04-lets/: expected  script
icicle-compiler/test/cli/repl/t04.1-filters/: expected  script
icicle-compiler/test/cli/repl/t05-nested-queries/: expected  script
icicle-compiler/test/cli/repl/t06-custom-folds/: expected  script
icicle-compiler/test/cli/repl/t06.01-scan/: expected  script
icicle-compiler/test/cli/repl/t07-possiblies/: expected  script
icicle-compiler/test/cli/repl/t08-randomly/: expected  script
icicle-compiler/test/cli/repl/t09-group-folds/: expected  script
icicle-compiler/test/cli/repl/t09.1-group-folds-element/: data.psv  dictionary.icicle  expected  script
icicle-compiler/test/cli/repl/t10-avalanche/: expected  script
icicle-compiler/test/cli/repl/t10.2-core/: expected  script
icicle-compiler/test/cli/repl/t10.3-flatten/: expected  script
icicle-compiler/test/cli/repl/t11-nested-dictionaries/: expected  script
icicle-compiler/test/cli/repl/t12-broken-dictionaries/: expected
icicle-compiler/test/cli/repl/t13-cases-either/: expected  script
icicle-compiler/test/cli/repl/t13.1-cases-record/: expected  script
icicle-compiler/test/cli/repl/t14-dates/: expected  script
icicle-compiler/test/cli/repl/t15-tombstones/: data.psv  expected  integral.icicle  script  test-dictionary.icicle
icicle-compiler/test/cli/repl/t16-prelude/: expected  script
icicle-compiler/test/cli/repl/t17-latest/: expected  script
icicle-compiler/test/cli/repl/t18-nested-structs/: dict.icicle  expected  script
icicle-compiler/test/cli/repl/t19-windows/: expected  script
icicle-compiler/test/cli/repl/t20-lexer/: expected  script
icicle-compiler/test/cli/repl/t30-sea/: expected  script
icicle-compiler/test/cli/repl/t30.1-eval/: expected  script
icicle-compiler/test/cli/repl/t30.2-array-strings/: dict.icicle  expected  script
icicle-compiler/test/cli/repl/t30.3-sum-not-error/: expected  script
icicle-compiler/test/cli/repl/t30.4-array-updates/: expected  script
icicle-compiler/test/cli/repl/t31-builtin/: dict.icicle  expected  script
icicle-compiler/test/cli/repl/t40-bigdata/: expected  script
icicle-compiler/test/cli/repl/t50-psv-many-rows/: expected  script
icicle-compiler/test/cli/repl/t60-map-delete/: expected  script
icicle-compiler/test/cli/repl/t60.1-map-insert/: expected  script
icicle-compiler/test/cli/repl/t61-bad-names/: expected  script
icicle-compiler/test/cli/repl/t70-zebra/: expected  script
icicle-compiler/test/cli/repl/t80-array-index/: expected  script
icicle-compiler/test/cli/zebra/: dictionary.icicle  run
icicle-compiler/test/cli/zebra-nested/: dictionary.icicle  run
icicle-core/: icicle-core.cabal
icicle-core/src/Icicle/Core/Eval/: Program.hs  Stream.hs
icicle-core/src/Icicle/Core/Exp/: Combinators.hs  Simp.hs
icicle-core/src/Icicle/Core/Program/: Check.hs  Simp.hs
icicle-core/src/Icicle/Core/Stream/: Check.hs
icicle-data/: icicle-data.cabal
icicle-data/benchmarks/: Main.hs
icicle-data/src/Icicle/Common/: Base.hs  FixT.hs  Fresh.hs  NanEq.hs  Type.hs
icicle-data/src/Icicle/Data/: Name.hs  Regex.hs  Time.hs
icicle-data/src/Icicle/Internal/: EditDistance.hs  Leijen.hs  Pretty.hs
icicle-data/tests/: Main.hs
icicle-source/: icicle-source.cabal
icicle-source/src/Icicle/: Encoding.hs
icicle-source/src/Icicle/Compiler/: Source.hs
icicle-source/src/Icicle/Dictionary/: Data.hs  Demographics.hs
icicle-source/src/Icicle/Sorbet/: Parse.hs  Position.hs  Render.hs
icicle-source/src/Icicle/Source/: Eval.hs  Parser.hs  PrettyAnnot.hs  Query.hs
(+103 files in other folders)
