name:                  icicle
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              icicle
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           icicle.

extra-source-files:
  data/make/main.c
  data/sea/*.h

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-anemone
                    --  , ambiata-disorder-corpus
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-piano
                     , ambiata-viking
                     , ambiata-x-file-embed
                     , ambiata-x-show
                     , ambiata-x-vector
                     , ambiata-zebra-core
                     , icicle-core
                     , icicle-data
                     , icicle-source
                     , aeson                           >= 0.8        && < 1.5
                     , aeson-pretty                    >= 0.8        && < 0.9
                     , ansi-terminal                   == 0.6.*
                     , bifunctors                      >= 4.2        && < 5.6
                     , boxes                           == 0.1.*
                     , bytestring                      == 0.10.*
                     , containers                      == 0.5.*
                     , deepseq                         >= 1.3        && < 1.5
                     , directory                       >= 1.2        && < 1.4
                     , exceptions                      >= 0.10
                     , file-embed                      == 0.0.9
                     , filepath                        >= 1.3        && < 1.5
                     , hashable
                     -- ^ Pinned in icicle-core
                     , haskeline                       == 0.7.*
                     , lens                            >= 4.7        && < 4.19
                     , lifted-async                    >= 0.9        && < 0.11
                     , lifted-base                     == 0.2.*
                     , mmorph                          >= 1.0
                     , monad-control                   == 1.0.*
                     , mtl                             == 2.2.*
                     , old-locale                      == 1.0.*
                     , parallel                        == 3.2.*
                     , pretty-show                     == 1.6.*
                     , primitive                       >= 0.6        && < 0.8
                     , resourcet                       >= 1.2        && < 2
                     , scientific                      == 0.3.*
                     , semigroups                      >= 0.16       && < 0.19
                     , template-haskell                >= 2.7        && < 2.16
                     , temporary                       == 1.2.*
                     , terminal-size                   == 0.3.*
                     , text                            == 1.2.*
                     , thyme                           == 0.3.*
                     , time                            >= 1.5        && < 1.10
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.3        && < 0.6
                     , transformers-either
                     , transformers-base               == 0.4.*
                     , unix                            == 2.7.*
                     , unordered-containers            == 0.2.*
                     , vector                          >= 0.11       && < 0.13
                     , vector-space                    >= 0.10
                     , void                            >= 0.5        && < 0.8
                     , wl-pprint-annotated             == 0.1.*
                     , zenc                            == 0.1.*

                     -- Well, it might look very odd that we're using both attoparsec
                     -- and parsec.
                     -- The thing is, attoparsec only operates on raw strings, and our source parser
                     -- for Icicle should operate over tokens.
                     -- Going over tokens instead of strings simplifies the parser itself and makes everything
                     -- a bit cleaner.
                     -- As an added benefit, parsec will give us nicer error messages.
                     , megaparsec                      >= 5.0        && < 8.0
                     ,     parsec                      == 3.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Icicle

                       Icicle.Avalanche.Program
                       Icicle.Avalanche.FromCore
                       Icicle.Avalanche.Eval
                       Icicle.Avalanche.Check
                       Icicle.Avalanche.Simp
                       Icicle.Avalanche.Annot
                       Icicle.Avalanche.Statement.Statement
                       Icicle.Avalanche.Statement.Simp
                       Icicle.Avalanche.Statement.Simp.Constructor
                       Icicle.Avalanche.Statement.Simp.Dead
                       Icicle.Avalanche.Statement.Simp.Eval
                       Icicle.Avalanche.Statement.Simp.ExpEnv
                       Icicle.Avalanche.Statement.Simp.Freshen
                       Icicle.Avalanche.Statement.Simp.Melt
                       Icicle.Avalanche.Statement.Simp.ThreshOrd
                       Icicle.Avalanche.Statement.Flatten
                       Icicle.Avalanche.Statement.Flatten.Algorithms
                       Icicle.Avalanche.Statement.Flatten.Base
                       Icicle.Avalanche.Statement.Flatten.Statement
                       Icicle.Avalanche.Statement.Flatten.Exp
                       Icicle.Avalanche.Prim.Flat
                       Icicle.Avalanche.Prim.Eval
                       Icicle.Avalanche.Prim.Compounds

                       Icicle.Command.Compile
                       Icicle.Command.Query
                       Icicle.Command.Timer

                       Icicle.Compiler
                       Icicle.Compiler.Sea

                       Icicle.Internal.Aeson
                       Icicle.Internal.Rename
                       Icicle.Internal.WrappedResourceT

                       Icicle.Repl
                       Icicle.Repl.Completion
                       Icicle.Repl.Data
                       Icicle.Repl.Flag
                       Icicle.Repl.Help
                       Icicle.Repl.Load
                       Icicle.Repl.Monad
                       Icicle.Repl.Option
                       Icicle.Repl.Parser
                       Icicle.Repl.Pretty
                       Icicle.Repl.Query
                       Icicle.Repl.Source

                       Icicle.Runtime.Data
                       Icicle.Runtime.Data.Any
                       Icicle.Runtime.Data.Array
                       Icicle.Runtime.Data.IO
                       Icicle.Runtime.Data.Logical
                       Icicle.Runtime.Data.Mask
                       Icicle.Runtime.Data.Primitive
                       Icicle.Runtime.Data.Schema
                       Icicle.Runtime.Data.Striped
                       Icicle.Runtime.Evaluator
                       Icicle.Runtime.Serial.Psv
                       Icicle.Runtime.Serial.Psv.Data
                       Icicle.Runtime.Serial.Psv.Schema
                       Icicle.Runtime.Serial.Zebra
                       Icicle.Runtime.Serial.Zebra.Schema
                       Icicle.Runtime.Serial.Zebra.Striped
                       Icicle.Runtime.Stencil

                       Icicle.Simulator

                       Icicle.Sea.Data
                       Icicle.Sea.Error
                       Icicle.Sea.Eval.Base
                       Icicle.Sea.FromAvalanche
                       Icicle.Sea.FromAvalanche.Analysis
                       Icicle.Sea.FromAvalanche.Base
                       Icicle.Sea.FromAvalanche.Prim
                       Icicle.Sea.FromAvalanche.Program
                       Icicle.Sea.FromAvalanche.State
                       Icicle.Sea.FromAvalanche.Type
                       Icicle.Sea.Header
                       Icicle.Sea.IO.Offset
                       Icicle.Sea.Name
                       Icicle.Sea.Preamble


executable icicle
    main-is:           icicle.hs

    hs-source-dirs:
                       main


    build-depends:     base
                     , icicle
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , ambiata-jetski
                     , ambiata-p
                     , ambiata-x-optparse
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , optparse-applicative            >= 0.14       && < 0.16
                     , mmorph
                     , parallel
                     , parsec
                     , resourcet
                     , temporary
                     , text
                     , time
                     , transformers
                     , transformers-either


    other-modules:
                       Paths_icicle

    -- The parallel GC prior to GHC 8.0.1 has pathological behaviour for
    -- unbalanced workloads:
    --
    --   https://ghc.haskell.org/trac/ghc/ticket/11783
    --
    -- Even with 8.0.1 there are still issues however, so some tuning can help:
    --
    --   https://ghc.haskell.org/trac/ghc/ticket/9221
    --
    if impl(ghc >= 8.0)
      ghc-options:
                      -Wall -threaded -O2 -funbox-strict-fields -rdynamic -rtsopts "-with-rtsopts=-A128m -n4m"
    else
      ghc-options:
                      -Wall -threaded -O2 -funbox-strict-fields -rdynamic -rtsopts "-with-rtsopts=-A128m -n4m -qg"

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2 -funbox-strict-fields

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , icicle
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-disorder-jack
                     , ambiata-p
                     , ambiata-jetski
                     , ambiata-x-file-embed
                     , ambiata-x-vector
                     , ambiata-anemone
                     , ambiata-zebra-core
                     , ambiata-zebra-core-test
                     , bifunctors
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , exceptions
                     , filepath
                     , geniplate-mirror                >= 0.7.2      && < 0.8
                     , megaparsec
                     , mtl
                     , parsec
                     , pretty-show
                     , hashable
                     , hedgehog
                     , hedgehog-quickcheck
                     , unordered-containers
                     , QuickCheck
                     , quickcheck-instances
                     , resourcet
                     , mmorph
                     , template-haskell
                     , temporary
                     , text
                     , transformers
                     , transformers-either
                     , unix
                     , vector
                     , semigroups

  other-modules:
                       Icicle.Test.Arbitrary
                       Icicle.Test.Arbitrary.Base
                       Icicle.Test.Arbitrary.Core
                       Icicle.Test.Arbitrary.Corpus
                       Icicle.Test.Arbitrary.Data
                       Icicle.Test.Arbitrary.NanEq
                       Icicle.Test.Arbitrary.Program
                       Icicle.Test.Arbitrary.Run
                       Icicle.Test.Arbitrary.Source
                       Icicle.Test.Arbitrary.SourceWithCore
                       Icicle.Test.Avalanche.CheckCommutes
                       Icicle.Test.Avalanche.EvalCommutes
                       Icicle.Test.Avalanche.Flatten
                       Icicle.Test.Avalanche.Melt
                       Icicle.Test.Avalanche.MeltPrim
                       Icicle.Test.Avalanche.SimpCommutes
                       Icicle.Test.Common.Data
                       Icicle.Test.Core.Exp.Alpha
                       Icicle.Test.Core.Exp.Check
                       Icicle.Test.Core.Exp.Eval
                       Icicle.Test.Core.Exp.Simp
                       Icicle.Test.Core.Program.Condense
                       Icicle.Test.Core.Program.Eval
                       Icicle.Test.Core.Program.Fusion
                       Icicle.Test.Data.Time
                       Icicle.Test.Encoding
                       Icicle.Test.Foreign.Array
                       Icicle.Test.Foreign.Utils
                       Icicle.Test.Gen.Core.Prim
                       Icicle.Test.Gen.Core.Program
                       Icicle.Test.Gen.Core.Type
                       Icicle.Test.Gen.Core.Value
                       Icicle.Test.Gen.Data.Fact
                       Icicle.Test.Gen.Data.Name
                       Icicle.Test.Gen.Runtime.Data
                       Icicle.Test.Internal.EditDistance
                       Icicle.Test.Language
                       Icicle.Test.Runtime.Corpus
                       Icicle.Test.Runtime.Data.Any
                       Icicle.Test.Runtime.Data.Array
                       Icicle.Test.Runtime.Data.IO
                       Icicle.Test.Runtime.Data.Schema
                       Icicle.Test.Runtime.Data.Striped
                       Icicle.Test.Runtime.Evaluator
                       Icicle.Test.Runtime.Serial.Psv.Schema
                       Icicle.Test.Runtime.Serial.Zebra
                       Icicle.Test.Sea.Name
                       Icicle.Test.Sea.Text
                       Icicle.Test.Sea.Utils
                       Icicle.Test.Serial
                       Icicle.Test.Source.Convert
                       Icicle.Test.Source.MaxMapSize
                       Icicle.Test.Source.PrettyParse
                       Icicle.Test.Source.Progress

test-suite test-io
  type:
                    exitcode-stdio-1.0

  main-is:
                    test-io.hs

  ghc-options:
                    -Wall -threaded -O2

  hs-source-dirs:
                    test

  build-depends:
                       base
                     , icicle-data
                     , icicle-source
                     , icicle-core
                     , icicle
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , containers
                     , hashable
                     , text
                     , QuickCheck
                     , quickcheck-instances
                     , template-haskell
                     , pretty-show
                     , temporary
                     , transformers
                     , transformers-either
                     , filepath


test-suite test-cli
  type:                exitcode-stdio-1.0

  main-is:             test-cli.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base
                     , ambiata-disorder-core
