name:                  icicle-core
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Icicle Core language definition.
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Icicle Core language definition and optimisations.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4

library
  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , ambiata-p
                     , containers                      >= 0.5
                     , hashable
                     , lens                            >= 4.7
                     , transformers                    >= 0.3
                     , text                            >= 1.2

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Icicle.Core

                       Icicle.Core.Stream
                       Icicle.Core.Stream.Stream
                       Icicle.Core.Stream.Error
                       Icicle.Core.Stream.Check

                       Icicle.Core.Program.Program
                       Icicle.Core.Program.Check
                       Icicle.Core.Program.Condense
                       Icicle.Core.Program.Error
                       Icicle.Core.Program.Simp
                       Icicle.Core.Program.Fusion
                       Icicle.Core.Program.Subst

                       Icicle.Core.Exp
                       Icicle.Core.Exp.Exp
                       Icicle.Core.Exp.Prim
                       Icicle.Core.Exp.Combinators
                       Icicle.Core.Exp.Simp

                       Icicle.Core.Eval.Exp
                       Icicle.Core.Eval.Stream
                       Icicle.Core.Eval.Program
