name:                  icicle-data
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Common bits for Icicle.
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Common bits for the Icicle compiler.

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-p
                     , ambiata-x-show
                     , ambiata-x-templatehaskell
                     , ansi-terminal                   == 0.6.*
                     , annotated-wl-pprint             == 0.7.*
                     , attoparsec
                     , containers                      == 0.5.*
                     , hashable                        >= 1.2
                     , lens                            >= 4.7
                     , mmorph                          >= 1.0
                     , semigroups                      >= 0.16       && < 0.20
                     , template-haskell                >= 2.9        && < 2.16
                     , text                            >= 1.2
                     , these
                     , thyme                           == 0.3.*
                     , time                            >= 1.5        && < 1.10
                     , time-locale-compat              == 0.1.*
                     , transformers                    >= 0.3        && < 0.6
                     , vector                          >= 0.11       && < 0.13
                     , vector-space                    >= 0.10
                     , wl-pprint-annotated             == 0.1.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Icicle.Common.Annot
                       Icicle.Common.Base
                       Icicle.Common.Data
                       Icicle.Common.Fresh
                       Icicle.Common.FixT
                       Icicle.Common.Eval
                       Icicle.Common.Exp
                       Icicle.Common.Exp.Alpha
                       Icicle.Common.Exp.Check
                       Icicle.Common.Exp.Compounds
                       Icicle.Common.Exp.Error
                       Icicle.Common.Exp.Exp
                       Icicle.Common.Exp.Eval
                       Icicle.Common.Exp.Prim.Minimal
                       Icicle.Common.Exp.Prim.Builtin
                       Icicle.Common.Exp.Prim.Eval
                       Icicle.Common.Exp.Simp
                       Icicle.Common.Exp.Simp.Beta
                       Icicle.Common.Exp.Simp.ANormal
                       Icicle.Common.Fragment
                       Icicle.Common.NanEq
                       Icicle.Common.Type
                       Icicle.Common.Value

                       Icicle.Internal.EditDistance
                       Icicle.Internal.Leijen
                       Icicle.Internal.Pretty

                       Icicle.Data
                       Icicle.Data.Fact
                       Icicle.Data.Name
                       Icicle.Data.Regex
                       Icicle.Data.Time


benchmark regex-bench
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       benchmarks
  main-is:              Main.hs

  ghc-options:
    -Wall -threaded

  build-depends:
    base,
    bytestring,
    criterion,
    icicle-data,
    text,
    these,
    transformers-either,
    ambiata-jetski


test-suite regex-tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Main.hs

  ghc-options:
    -Wall -threaded

  build-depends:
    base,
    bytestring,
    hedgehog,
    exceptions,
    icicle-data,
    text,
    these,
    transformers-either,
    ambiata-jetski,
    mmorph
