name:                  icicle-source
version:               0.0.1
license:               BSD3
license-file:          LICENSE
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              Icicle Source language parser and type checker.
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           Icicle Source language parser, type checker, and elaborator.

extra-source-files:
  data/libs/prelude.icicle

tested-with:
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.4

library
  build-depends:
                       base                            >= 3          && < 5
                     , icicle-data
                     , icicle-core
                     , ambiata-anemone
                     , ambiata-p
                     , ambiata-x-show
                     , array
                     , attoparsec
                     , aeson
                     , attoparsec-aeson
                     , ansi-terminal
                     , bifunctors
                     , bytestring
                     , containers                      >= 0.5.9
                     , filepath
                     , directory
                     , file-embed
                     , hashable
                     , lens
                     , megaparsec                      >= 9.0        && < 10
                     , mmorph                          >= 1.0
                     , parser-combinators
                     , scientific
                     , semigroups
                     , unordered-containers
                     , text
                     , these
                     , thyme
                     , time                            >= 1.5        && < 1.10
                     , time-locale-compat
                     , transformers
                     , transformers-either
                     , validation
                     , vector

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:

                       Icicle.Sorbet.Abstract.Parser
                       Icicle.Sorbet.Abstract.Regex
                       Icicle.Sorbet.Abstract.Tokens
                       Icicle.Sorbet.Abstract.Type
                       Icicle.Sorbet.Concrete.Annotation
                       Icicle.Sorbet.Concrete.Parser
                       Icicle.Sorbet.Concrete.Pretty
                       Icicle.Sorbet.Concrete.Syntax
                       Icicle.Sorbet.Lexical.Escape
                       Icicle.Sorbet.Lexical.Layout
                       Icicle.Sorbet.Lexical.Lexer
                       Icicle.Sorbet.Lexical.Syntax
                       Icicle.Sorbet.Position
                       Icicle.Sorbet.Parse

                       Icicle.Source.Eval
                       Icicle.Source.Query
                       Icicle.Source.Query.Query
                       Icicle.Source.Query.Builtin
                       Icicle.Source.Query.Constructor
                       Icicle.Source.Query.Context
                       Icicle.Source.Query.Exp
                       Icicle.Source.Query.Environment
                       Icicle.Source.Query.Function
                       Icicle.Source.Query.Module
                       Icicle.Source.Query.Operators
                       Icicle.Source.Query.Prim
                       Icicle.Source.Lexer.Token

                       Icicle.Source.Parser
                       Icicle.Source.Parser.Constructor
                       Icicle.Source.Parser.Operators

                       Icicle.Source.Type
                       Icicle.Source.Type.Base
                       Icicle.Source.Type.Compounds
                       Icicle.Source.Type.Constraints
                       Icicle.Source.Type.Pretty
                       Icicle.Source.Type.Subst

                       Icicle.Source.Checker
                       Icicle.Source.Checker.Base
                       Icicle.Source.Checker.Checker
                       Icicle.Source.Checker.Constraint
                       Icicle.Source.Checker.Error
                       Icicle.Source.Checker.Function
                       Icicle.Source.Checker.Invariants
                       Icicle.Source.Checker.Prim
                       Icicle.Source.Checker.Resumable
                       Icicle.Source.Checker.Subsumption

                       Icicle.Source.ToCore.Base
                       Icicle.Source.ToCore.Exp
                       Icicle.Source.ToCore.Fold
                       Icicle.Source.ToCore.ToCore
                       Icicle.Source.ToCore.Prim

                       Icicle.Source.Transform.Base
                       Icicle.Source.Transform.SubstX
                       Icicle.Source.Transform.Inline
                       Icicle.Source.Transform.Desugar
                       Icicle.Source.Transform.ReifyPossibility
                       Icicle.Source.Transform.Simp
                       Icicle.Source.Transform.Simp.Dumb

                       Icicle.Source.PrettyAnnot

                       Icicle.Encoding

                       Icicle.Serial

                       Icicle.Dictionary
                       Icicle.Dictionary.Data
                       Icicle.Dictionary.Demographics

                       Icicle.Storage.Dictionary.Sorbet

                       Icicle.Compiler.Source
